--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@font-face {
+  font-family: 'Oswald';
+  src: url('/fonts/Oswald-VariableFont_wght.ttf') format('truetype-variations');
+  font-weight: 1 999;
+  font-stretch: 75% 120%;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Montserrat';
+  src: url('/fonts/Montserrat-VariableFont_wght.ttf') format('truetype-variations');
+  font-weight: 1 999;
+  font-stretch: 75% 120%;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Montserrat';
+  src: url('/fonts/Monterrat-Italic-VariableFont_wght.ttf') format('truetype-variations');
+  font-weight: 1 999;
+  font-stretch: 75% 120%;
+  font-style: italic;
+}
